infra/k8s/dev/07-agent/service-agent-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: agent
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
